
opam-version: "2.0"
version: "0.5.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
synopsis: "Minimal JSON-RPC implementation for OCaml"
homepage: "https://github.com/derui/jsonrpc-ocaml"
bug-reports: "https://github.com/derui/jsonrpc-ocaml/issues"
dev-repo: "git+https://github.com/derui/jsonrpc-ocaml"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" {build & >= "1.0.0"}
  "yojson" { >= "1.6.0" }
  "lwt"{ with-test & >= "4.0.0"}
  "alcotest" { with-test & >= "0.8.4" }
  "alcotest-lwt" { with-test & >= "0.8.0" }
  "cohttp-lwt-unix" { with-test & >= "2.0.0" }
]
available: ["ocaml" >= "4.05.0"]
